added habitbook and philosophy to wiki

--- a/wiki/201910.md
+++ b/wiki/201910.md
@@ -1,4 +1,4 @@
 # 201910
 
-- [Habitbook](https://github.com/shunkakinoki/shunkakinoki)
-- [Execution](https://github.com/shunkakinoki/shunkakinoki)
+- [Habitbook](https://docs.google.com/spreadsheets/d/1AY19BuatlOVbfhwEPjWDierlZ8LcHmOnT7TMOjmdI9k/edit?usp=sharing)
+- [Execution](https://docs.google.com/spreadsheets/d/1Dw6etaIECTITntRcb8b-MIgXkzs-meW8J2FOPfwK5nU/edit?usp=sharing)
