--- a/src/day/2019/10/29.md
+++ b/src/day/2019/10/29.md
@@ -30,13 +30,23 @@ MAXIMUM AWARENESS OF MY SITUATION -OBJECTIVELY AND SUBJECTIVELY-
 
 ## OBJECTIVE
 
-INITIATE WORKFLOW ENTIRELY -INITIATE THE ENTIRE WORK FLOW-
+DID NOT DO
 
 ## KEY RESULTS
 
+DID NOT DO
+
 ### EVOLUTION
 
+- GHA Configuration
+- CI/CD, Docker, Shell Skills
+- Need to improve my energy
+
 ### IMPROVEMENTS
+
+- Define Sleep Routine -> Zenhub
+- Define Google Sheet Routine -> Zenhub
+- Define Bad Routine -> Zenhub
 
 ## EOI
 
@@ -48,6 +58,10 @@ INITIATE WORKFLOW ENTIRELY -INITIATE THE ENTIRE WORK FLOW-
 
 ### OBSERVATION
 
+- Have to explore into new territories
+- More control towards over myself
+- Go into darkness
+
 ### INSIGHT
 
 ## THIS WEEK'S QUOTE
@@ -56,4 +70,4 @@ INITIATE WORKFLOW ENTIRELY -INITIATE THE ENTIRE WORK FLOW-
 
 ## CALENDAR
 
-[CALENDAR DRIVE LINK]()
+DID NOT DO
