--- a/src/day/2019/11/05.md
+++ b/src/day/2019/11/05.md
@@ -30,13 +30,13 @@ MAXIMUM AWARENESS OF MY SITUATION -OBJECTIVELY AND SUBJECTIVELY-
 
 ## OBJECTIVE
 
-INITIATE FROM THE CURRENT MOMENT -MY LIFE IS AT DANGER-
+MAXIMIZE THE EFFICIENCY OF THE MOMENT
 
 ## KEY RESULTS
 
-- INITIATE AN INITIAL COMPLETE WORKFLOW (CALENDAR & SHUNBLOG & ZENHUB)
-- COMPLETE INITIAL STREAKS SETUP (1 HOUR) -> STREAKS
 - MAKE A PRODUCT SHEET OF MY LIFE GOALS ALONG WITH SOME MAJOR FACTORS IN GOOGLE SHEETS -> ZENHUB
+- COMPLETE INITIAL STREAKS DESCRIPTION -> ZENHUB
+- WORK 6 HOURS ALL-OUT ON DATA SCIENCE (PROJECT AND COMPETITION)
 
 ### EVOLUTION
 
