--- a/wiki/book/2020/00/03.md
+++ b/wiki/book/2020/00/03.md
@@ -1,18 +1,20 @@
 # 超効率的勉強法 Daigo
 
-1. インターリービング学習
+## 2020/00/03
+
+### 1. インターリービング学習
 
 - ジャンルは 3 つまでに絞る
 - 時間は均等に割りふる
 - ワンセッションごとに休憩を入れる
 
-2. ミュージック・ウォームアップ・テクニック
+### 2. ミュージック・ウォームアップ・テクニック
 
 - 勉強の 10 分前までに好きな曲を聴く
 - 音楽を止めて勉強を始める
 - 勉強の休憩中にまた好きな曲を聴く
 
-3. 自分でテストの問題を作る
+### 3. 自分でテストの問題を作る
 
 - 勉強中に、覚えたいところがあったら本を閉じる
 - 内容を思い出しながら、クイズに変換する
