--- a/src/day/2020/00/08.md
+++ b/src/day/2020/00/08.md
@@ -40,7 +40,15 @@ EVOLVE, EVOLVE, & EVOLVE NUMBER ONE IN THE WORLD
 
 ### EVOLUTION
 
+- Initiated Endeavor Work
+- Developnism for Endeavor
+- 6:00 AM Workout
+
 ### IMPROVEMENTS
+
+- Initiate Abstraction Work -> ZENHUB
+- Concentration Quantification Routine -> ZENHUB
+- Initiate Research Entrepreneur -> ZENHUB
 
 ### PRIORITY
 
