--- a/src/day/2020/02/06.md
+++ b/src/day/2020/02/06.md
@@ -54,7 +54,7 @@ BURST WITH PASSION LIKE IF MY LIFE IS ON THE LINE
 
 "It's Not Who I Am Underneath, But What I Do That Defines Me."
 
-- Batman [Batman Begins]
+- Batman (Batman Begins)
 
 ## METRICS
 
