--- a/src/day/2020/02/12.md
+++ b/src/day/2020/02/12.md
@@ -44,6 +44,7 @@ DON'T WASTE A MOMENT -MAXIMUM GRIT BLASTOFF-
 
 - INITIATED `WEAKNESS` SECTION
 - EXPOSE DAY CALENDAR TO LINE GROUP -> PROMISE
+- EXPOSE LIST OF THINGS EXECUTED -> PROMISE
 
 ### WEAKNESS
 
@@ -51,7 +52,7 @@ DON'T WASTE A MOMENT -MAXIMUM GRIT BLASTOFF-
 
 "My parents are my backbone.
 Still are.
-They’re the only group that will support you if you score zero or you score 40."
+They're the only group that will support you if you score zero or you score 40."
 
 - Kobe Bryant
 
