--- a/src/day/2020/02/15.md
+++ b/src/day/2020/02/15.md
@@ -46,7 +46,7 @@ PITCH 300 EXECUTION - FIND THE VICTORY ROAD -
 
 ### IMPROVEMENTS
 
-- Need only the `<CONCENTRATION>-<QUANTITY>-<MINDSET>- ATTRIBUTES WITH CALENDAR -> ZENHUB
+- Need only the `CONCENTRATION-QUANTITY-MINDSET- ATTRIBUTES WITH CALENDAR -> ZENHUB
 - Not `Grinding All My Life`
 - Face the truth
 
