--- a/wiki/book/pad/001.md
+++ b/wiki/book/pad/001.md
@@ -1,6 +1,6 @@
-# 1兆ドルコーチ Eric Schmidt
+# 001. 1兆ドルコーチ Eric Schmidt
 
-## 2020/00/03
+## 2020/02/03
 
 ### IMPORTANT 1.プロダクトがすべてに優先する
 
@@ -14,5 +14,9 @@
 ### 3. 影響力を図る「ものさし」
 
 - 自分のために働いてくれた人
-- 自分が何ら化のかたちで助けた人
+- 自分が何らかのかたちで助けた人
 - すぐれたリーダーになった人
+
+# Action
+
+プロダクトを産出物として、ビジョンを実現するために起業する
