--- a/wiki/book/work/001.md
+++ b/wiki/book/work/001.md
@@ -1,6 +1,6 @@
-# 超効率的勉強法 Daigo
+# 001. 超効率的勉強法 Daigo
 
-## 2020/00/03
+## 2020/02/03
 
 ### 1. インターリービング学習
 
@@ -19,3 +19,9 @@
 - 勉強中に、覚えたいところがあったら本を閉じる
 - 内容を思い出しながら、クイズに変換する
 - ノートに答えを書いて折り、折り返し部分に問題を書く
+
+### Action
+
+- Lo-Fi Beats during study
+- Interleaving study
+- Music warm-up technique
